# Consultant---Tracker

./: CODEBASE_STRUCTURE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: Consultant--Tracker-ci.yml  Consultant-ci.yml  Tracker-ci.yml
backend/app/: main.py
backend/app/core/: __init__.py  ai_service.py  auth.py  config.py  db.py  logging_config.py  models.py  schema_registry.py  schemas.py
backend/app/modules/: __init__.py
backend/app/modules/auth/: __init__.py  models.py  module.py  repository.py  router.py  schema.py
backend/app/modules/auth/user_repositories/: __init__.py  admins.py  consultants_user.py  recruiters.py
backend/app/modules/auth/user_schemas/: __init__.py  admins.py  consultants_user.py  recruiters.py
backend/app/modules/consultants/: __init__.py  models.py  module.py  repository.py  router.py  schema.py
backend/app/modules/jobs/: __init__.py  models.py  module.py  repository.py  router.py  schema.py
backend/app/modules/recruiters/: __init__.py  models.py  module.py  repository.py  router.py  schema.py
backend/app/modules/submissions/: __init__.py  models.py  module.py  repository.py  router.py  schema.py
frontend/src/: api.js
frontend/src/components/recruiter/: JobManager.js
