[project]
name = "consultant-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "motor",
    "pydantic[email]",
    "python-multipart",
    "uvicorn[standard]",
    "python-dotenv",
    "pytest",
    "pytest-asyncio",
    "httpx",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt<4.0.0", # Pin bcrypt to compatible version for passlib
    "aiofiles",
    "authlib>=1.6.5",
    "google-generativeai",
]
